--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
 body {
     text-align: center;
 }
+.title {
+
+}
+.instructions {
+	margin: auto;
+	text-align: center;
+	width: 75%;
+}
+.scoreboard {
+	font-weight: bold;
+	margin-top: 25px;
+	margin-bottom: 0;
+}
+.gameCanvas {
+	margin: 0;
+}
+footer {
+	font-style: italic;
+	margin-bottom: 25px;
+}
